--- a/site/style.css
+++ b/site/style.css
@@ -1,1 +1,57 @@
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #1B263B; 
+    color: #E5E5E5; 
+}
+
+
+nav {
+    background-color: #4E9F3D; 
+    padding: 10px 20px;
+}
+
+nav .menu {
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    gap: 15px;
+}
+
+nav .menu li a {
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+nav .menu li a:hover {
+    color: #E5E5E5;
+}
+
+.banner {
+    width: 100%;
+    height: 300px;
+    background-color: #000000; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner img {
+    max-width: 100%;
+    height: auto;
+}
+
+ 
+.container-index {
+    padding: 20px;
+    text-align: center;
+}
